--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="message">
-        <h1>VRaja Loka is Coming Soon</h1>
+        <h1>Vraja Loka is Coming Soon</h1>
         <p>We are working hard to bring you something amazing. Stay tuned!</p>
     </div>
 </body>
