--- a/index.html
+++ b/index.html
@@ -7,35 +7,63 @@
     <title>Coming Soon</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
+            background-color: #f1f2f6;
+            margin: 0;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
+            color: #333;
         }
-        .message {
+        .container {
             text-align: center;
-            background-color: #fff;
-            padding: 20px;
+            background-color: #ffffff;
+            padding: 40px 30px;
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            max-width: 600px;
+            width: 100%;
         }
         h1 {
-            font-size: 2.5em;
-            color: #333;
+            font-size: 3.2em;
+            color: #2c3e50;
+            margin-bottom: 10px;
         }
         p {
             font-size: 1.2em;
-            color: #777;
+            color: #7f8c8d;
+            margin-bottom: 20px;
+        }
+        .website-name {
+            font-size: 1.5em;
+            font-weight: 600;
+            color: #2980b9;
+            margin-top: 20px;
+        }
+        .footer {
+            font-size: 0.9em;
+            color: #95a5a6;
+            margin-top: 30px;
+        }
+        .footer a {
+            color: #2980b9;
+            text-decoration: none;
+        }
+        .footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div class="message">
-        <h1>Vraja Loka is Coming Soon</h1>
-        <p>We are working hard to bring you something amazing. Stay tuned!</p>
+    <div class="container">
+        <div class="website-name">Vraja Loka</div>
+        <h1>Coming Soon</h1>
+        <p>We are working on something exciting. Stay tuned for the launch of our website!</p>
+        <div class="footer">
+            <p>For updates, follow us on <a href="#">social media</a> or <a href="#">contact us</a> for more info.</p>
+        </div>
     </div>
 </body>
 </html>
