--- a/index.html
+++ b/index.html
@@ -3,64 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Coming Soon</title>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f1f2f6;
+        /* Reset some default styling */
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body styling */
+        body {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
+            background: linear-gradient(180deg, #f5f5f7, #e3e4e8);
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             color: #333;
         }
+
+        /* Container for the message box */
         .container {
             text-align: center;
-            background-color: #ffffff;
-            padding: 40px 30px;
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
             max-width: 600px;
-            width: 100%;
+            padding: 20px;
         }
+
+        /* Heading styling */
         h1 {
-            font-size: 3.2em;
-            color: #2c3e50;
+            font-size: 3rem;
+            font-weight: 500;
+            color: #333;
             margin-bottom: 10px;
         }
+
+        /* Message paragraph styling */
         p {
-            font-size: 1.2em;
-            color: #7f8c8d;
+            font-size: 1.2rem;
+            color: #666;
             margin-bottom: 20px;
+            line-height: 1.5;
         }
+
+        /* Subtle website name styling */
         .website-name {
-            font-size: 1.5em;
-            font-weight: 600;
-            color: #2980b9;
-            margin-top: 20px;
-        }
-        .footer {
-            font-size: 0.9em;
-            color: #95a5a6;
-            margin-top: 30px;
-        }
-        .footer a {
-            color: #2980b9;
-            text-decoration: none;
-        }
-        .footer a:hover {
-            text-decoration: underline;
+            font-size: 1rem;
+            font-weight: 300;
+            color: #888;
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="website-name">Vraja Loka</div>
         <h1>Coming Soon</h1>
-        <p>We are working on something exciting. Stay tuned for the launch of our website!</p>
+        <p>We’re working on something special for you. Stay tuned for updates.</p>
+        <div class="website-name">Vraja Loka</div>
     </div>
 </body>
 </html>
