--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
             padding: 20px;
         }
 
+        /* Website name styling */
+        .website-name {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #007aff; /* Blue color for emphasis */
+            margin-bottom: 20px;
+        }
+
         /* Heading styling */
         h1 {
             font-size: 3rem;
@@ -42,24 +50,16 @@
         p {
             font-size: 1.2rem;
             color: #666;
-            margin-bottom: 20px;
             line-height: 1.5;
-        }
-
-        /* Subtle website name styling */
-        .website-name {
-            font-size: 1rem;
-            font-weight: 300;
-            color: #888;
             margin-top: 10px;
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <div class="website-name">Vraja Loka</div>
         <h1>Coming Soon</h1>
         <p>We’re working on something special for you. Stay tuned for updates.</p>
-        <div class="website-name">Vraja Loka</div>
     </div>
 </body>
 </html>
